# opengl-template

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  HelloTriangle.sln  HelloTriangle.vcxproj  HelloTriangle.vcxproj.filters  imgui.ini  main.cpp  opengl-template.cpp  opengl-template.h  vcpkg.json
